# binance-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
tests/: test_cli.py  test_client.py  test_client_signing.py  test_foundation.py  test_orders.py  test_validators.py
trading_bot/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py  formatting.py  logging_config.py  models.py  orders.py  validators.py
